--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "aws-amplify": "^3.0.23",
+    "aws-amplify-react": "^4.1.22",
     "bootstrap": "^4.5.2",
     "formik": "^2.1.5",
     "react": "^16.13.1",
+    "react-chat-ui": "^0.3.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
