--- a/package.json
+++ b/package.json
@@ -5,16 +5,24 @@
 	"dependencies": {
 		"@emotion/core": "^10.0.34",
 		"@emotion/styled": "^10.0.27",
+		"@fortawesome/fontawesome-svg-core": "^1.2.30",
+		"@fortawesome/free-solid-svg-icons": "^5.14.0",
+		"@fortawesome/react-fontawesome": "^0.1.11",
+		"@material-ui/core": "^4.11.0",
+		"@material-ui/icons": "^4.9.1",
+		"@material-ui/lab": "^4.0.0-alpha.56",
 		"@reduxjs/toolkit": "^1.4.0",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"bootstrap": "^4.5.2",
+		"clsx": "^1.1.1",
 		"formik": "^2.1.5",
 		"mdbreact": "^4.27.0",
 		"mysql": "latest",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-modal": "^3.11.2",
 		"react-redux": "^7.2.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
